Minor cleanups